# Customer-Purchase-Prediction-System-with-MLOps

./: .pre-commit-config.yaml  README copy.md  README.md  pyproject.toml
notebook/: model.ubj
